# RiRi

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  License.md  README.md
.github/workflows/: build_and_test_riri.yaml
.notes/: RiRi Explained (mostly).md
.notes/optimisation_choices/: function pointers over std.function and lambdas.md  string_view over string.md  unordered_dense over unordered_map.md
config/: riri.config
connectors/: readme.md
include/: CommandParser.h  DataStore.h  Error.h  NetworkManager.h  PersistenceEngine.h  RiRiServer.h  riri.hpp
include/riri/: Commands.hpp  Parser.hpp  Persistence.hpp  RapidResponse.hpp  RapidTypes.hpp  RiRi.hpp  utils.hpp
include/riri/utils/: Accessors.hpp
src/: CommandParser.cpp  DataStore.cpp  PersistenceEngine.cpp  main.cpp
src/cli/: Main.cpp
src/commands/: clear.cpp  delete.cpp  get.cpp  set.cpp  update.cpp
src/core/: DataManager.cpp  MemoryMaps.cpp
src/include/: DataManager.h  Loader.h  MemoryMaps.h  RapidTypes.h  RiRiMacros.h
src/utils/: RapidError.h  RapidResponse.hpp
src/utils/helpers/: status_to_string.hpp
tests/: CMakeLists.txt
tests/units/: test_core.cpp  test_utils.cpp
tests/units/commands/: test_clear.cpp  test_delete.cpp  test_get.cpp  test_set.cpp  test_update.cpp
tests/units/response/: test_status.cpp  test_status_batch_with.cpp  test_status_error_batch_with.cpp  test_status_with.cpp
